--- a/.travis.yml
+++ b/.travis.yml
@@ -1,56 +1,8 @@
 language: elixir
 elixir:
-  - 1.3.3
-  - 1.3.4
-  - 1.4.0-rc.0
-  - 1.4.0
-  - 1.4.1
-  - 1.4.2
-  - 1.4.4
-  - 1.4.5
+  - 1.7.3
 otp_release:
   - 19.3
-  - 19.2
-  - 19.1
-  - 19.0
-  - 18.3
-  - 18.2
-  - 18.1
-  - 18.0
-matrix:
-  include:
-    - otp_release: 18.0
-      elixir: 1.4.0-rc.1
-    - otp_release: 18.1
-      elixir: 1.4.0-rc.1
-    - otp_release: 20.0
-      elixir: 1.4.5
-    - otp_release: 18.0
-      elixir: 1.5.0
-    - otp_release: 18.1
-      elixir: 1.5.0
-    - otp_release: 19.3
-      elixir: 1.5.0
-    - otp_release: 20.0
-      elixir: 1.5.0
-    - otp_release: 18.0
-      elixir: 1.5.1
-    - otp_release: 18.1
-      elixir: 1.5.1
-    - otp_release: 19.3
-      elixir: 1.5.1
-    - otp_release: 20.0
-      elixir: 1.5.1
-    - otp_release: 20.1
-      elixir: 1.5.0
-    - otp_release: 20.1
-      elixir: 1.5.1
-    - otp_release: 20.1
-      elixir: 1.5.2
-    - otp_release: 20.2
-      elixir: 1.5.2
-    - otp_release: 20.2
-      elixir: 1.6.0
 addons:
   artifacts:
     debug: true
@@ -58,7 +10,8 @@ addons:
       - $(ls plts/*.plt)
     working_dir: plts
     target_paths:
-      - travis_elixir_plts
+      - elixir_plts
+
 before_script:
   - export PATH=`pwd`/elixir/bin:$PATH
   - git clone https://github.com/jeremyjh/dialyxir.git
@@ -66,5 +19,6 @@ before_script:
   - MIX_ENV=prod mix do compile, archive.build
   - MIX_ENV=prod mix archive.install --force
   - cd ..
+
 script:
   - MIX_ENV=test travis_wait 30 mix dialyzer --plt
